--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Buscar" />
+        <activity android:name=".Buscar">
+           <!-- android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+             -->
+        </activity>
         <activity android:name=".Settings" />
         <activity android:name=".SelectFilters" />
         <activity android:name=".ListaProductos" />
