Finish ScrollingActivity,ListaProductos. Filters improved Correct some design errors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Settings" />
-        <activity android:name=".SelectFilters" />
-        <activity android:name=".ListaProductos" />
+        <activity android:name=".ListaProductos"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ScrollingActivity"
             android:label="@string/title_activity_scrolling"
